--- a/pages/map/index.wxss
+++ b/pages/map/index.wxss
@@ -14,6 +14,10 @@
   font-size: 1.5rem;
   color: #fff;
 }
+.radio-group{
+  margin: 0.5rem 0;
+  text-align: center;
+}
 .text-data1{
   display: flex;
   justify-content: center;
